# clang-notes

./: .gitignore  README.md
CMake/official_tutorial/step1/: CMakeLists.txt  tutorial.c  tutorial.cxx
CMake/official_tutorial/step2/: CMakeLists.txt  tutorial.cxx
CMake/official_tutorial/step2/math_functions/: math_functions.h  mysqrt.cxx
DataStructure/02-linear_list/: sequent_list.c
algorithms_in_c/fundamentals/array/: 3.5_sieve_eratosthenes.c
algorithms_in_c/fundamentals/array/examples/3.5_sieve_eratosthenes/: bit_array.c  int_array.c
algorithms_in_c/fundamentals/array/examples/3.6_dynamic_mem_allocation/: dynamic_arr.c
algorithms_in_c/fundamentals/building_blocks/: main  main.c  program_3.1.c
books/algorithms_in_c/Data_Structures/3.2_array/examples/3.7_coin_flipping_simulation/: coin_flip_sim.c
books/algorithms_in_c/Data_Structures/3.2_array/exercises/: ex_3.11.c
books/algorithms_in_c/Data_Structures/3.4_Elementary_list_processing/3.10_list_reversal/: CMakeLists.txt  main.c
books/algorithms_in_c/Data_Structures/3.4_Elementary_list_processing/3.11_list_insertion_sort/: main.c
books/algorithms_in_c/Data_Structures/3.4_Elementary_list_processing/3.13_list_allocation_for_josephus_problem/: CMakeLists.txt
books/algorithms_in_c/Data_Structures/3.5_Memory_Allocation_for_list/3.14_imple_of_list-processing_interface/: list.c  list.h
books/algorithms_in_c/Data_Structures/3.6_Strings/3.15_string_search/: CMakeLists.txt  main.c
books/algorithms_in_c/Data_Structures/3.7_Compound_Data_Structures/3.16_tow-dimensional_array_allocation/: main.c
exmaples/c_library/stdio/: getchar.c  tmp.c
exmaples/etc/: void_pointer.c
(+27 files in other folders)
